--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 project(Worms)
 
 add_subdirectory(client)
-
+add_subdirectory(editor)
+add_subdirectory(server)
